cmake_minimum_required(VERSION 3.5.0)

project(opengl-demo VERSION 1.0)

add_subdirectory("lesson1(set up app framework)")
add_subdirectory("lesson2(set up opengl)")
add_subdirectory("lesson3(draw)")
add_subdirectory("lesson4(matrix)")
add_subdirectory("lesson5(light)")
add_subdirectory("lesson6(texture)")